# telemetry-app

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: app.py  database.py  schemas.py
backend/tests/: conftest.py
client/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/api/: telemetryApi.test.ts  telemetryApi.ts
client/src/components/: AddTelemetryForm.test.tsx  AddTelemetryForm.tsx  FilterBar.test.tsx  FilterBar.tsx  FormControls.tsx  Spinner.tsx  StatusBadge.test.tsx  StatusBadge.tsx  TelemetryTable.test.tsx  TelemetryTable.tsx
client/src/hooks/: useDebouncedValue.ts  useTelemetry.test.ts  useTelemetry.ts
client/src/lib/: date.ts  status.ts
client/src/test/: setup.ts
src/: app.py  database.py
tests/: test_telemetry.py
